--- a/Figure 3.3/3.3READ.md
+++ b/Figure 3.3/3.3READ.md
@@ -1,1 +1,2 @@
-
+![image](https://github.com/user-attachments/assets/2de6692d-40f1-44aa-b6ea-c3ee7cbbbc8f)
+This graph utilises the DHARMa package and highlights the appropriate use of the GLMM for this data.
