--- a/Figure 3.7/3.7DHARMa.md
+++ b/Figure 3.7/3.7DHARMa.md
@@ -1,1 +1,3 @@
 ![image](https://github.com/user-attachments/assets/509b6c99-4b95-4c16-996f-8edf54421568)
+This graph displays whether a GLMM was an appropriate model for this dataset. There is deviation, which resulted in uncertainty surrounding the significance displayed from the GLMM.
+Therefore, to be sure a Wilcoxon rank signed test was conducted alongside a Bonferroni correction to ensure significance is the same as calculated in the GLMM. P-values were adjusted as per multiple comparison testing.
